# sql-chat-app

./: .env.e2e.example  .env.example  .gitignore  .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_old.json  .graphify_uncached.txt  AGENTS.md  CHATBOT_TEST_QUESTIONS.md  CLAUDE.md  LICENSE  QUERYWISE_TESTS.md  README.md  _graphify_ast.py  _list_uncached.py  _semantic_extract.py  dev.sh  docker-compose.share.yml  docker-compose.yml  fix_resource_complete.patch  fix_resource_detection.patch  gg.py  resource_agent_fix.py  save_graph.py  skills-lock.json  token-usage-output.txt
backend/: .dockerignore  Dockerfile  alembic.ini  mypy.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/scripts/: backup.sh  reembed_connection.py  restore.sh  seed_ifrs9_metadata.py  seed_sqlserver_metadata.py
backend/tests/: conftest.py  test_confidence_scoring.py  test_conflict_resolution.py  test_context_aware_classifier.py  test_context_aware_param_extractor.py  test_context_recovery.py  test_deterministic_override.py  test_domain_agents.py  test_fallback_ladder.py  test_field_registry.py  test_filter_extractor.py  test_followup_detection.py  test_graph_nodes.py  test_graph_pipeline.py  test_graph_state.py  test_graph_state_extension.py  test_groq_extractor.py  test_intent_catalog.py  test_intent_catalog_fallbacks.py  test_intent_classifier.py  test_llm_extraction.py  test_observability.py  test_plan_updater.py  test_query_caching.py  test_query_plan_model.py  test_queryplan_integration.py  test_rate_limit_handling.py  (+6 more)
(+358 files in other folders)
